BTWCT-1124: Fixed IE11 alignment

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -185,6 +185,11 @@ nav.cmp-navigation {
          }
 
          & > .cmp-navigation__container{
+            display: table-cell;
+
+            @supports (display: inline-grid) {
+               display: block;
+            }
 
             @include mobile {
                display: flex;
